@@ -1,12 +1,11 @@
 use v5.14;
 
+use constant AUTHOR_TESTING => $ENV{AUTHOR_TESTING};
 use constant HAS_LEAKTRACE => eval{ require Test::LeakTrace };
 
-use Test::More HAS_LEAKTRACE ? (tests => 17) : (skip_all => 'require Test::LeakTrace');
-
-unless ( $ENV{AUTHOR_TESTING} ) {
-    plan( skip_all => "Author tests not required for installation" );
-}
+use Test::More AUTHOR_TESTING
+  ? ( HAS_LEAKTRACE ? ( tests => 17 ) : ( skip_all => 'require Test::LeakTrace' ) )
+  : skip_all => "Author tests not required for installation";
 
 use Test::LeakTrace;
 
